// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth User Registration creates new registration 1`] = `
Object {
  "data": Object {
    "registerPerson": Object {
      "user": Object {
        "id": "AuthenticatedUser:057b0758543270d1cb21784cac4d3f5c",
        "profile": Object {
          "email": "isaac.hardy@newspring.cc",
        },
      },
    },
  },
}
`;

exports[`Auth User Registration passes the right args when creating a registration 1`] = `
Array [
  Array [
    Object {
      "email": "hello.world@earth.org",
    },
  ],
]
`;

exports[`Auth User Registration passes the right args when creating a registration 2`] = `
Array [
  Array [
    Object {
      "email": "hello.world@earth.org",
      "password": "good",
      "personId": "123",
    },
  ],
]
`;

exports[`Auth currentUser query logs a user out without a sessionId 1`] = `
Object {
  "data": Object {
    "currentUser": null,
  },
  "errors": Array [
    [GraphQLError: Must be logged in],
  ],
}
`;

exports[`Auth currentUser query queries current user when logged in 1`] = `
Object {
  "data": Object {
    "currentUser": Object {
      "id": "AuthenticatedUser:057b0758543270d1cb21784cac4d3f5c",
      "profile": Object {
        "email": "isaac.hardy@newspring.cc",
      },
    },
  },
}
`;

exports[`Auth currentUser query requires you to be logged in 1`] = `
Object {
  "data": Object {
    "currentUser": null,
  },
  "errors": Array [
    [GraphQLError: Must be logged in],
  ],
}
`;

exports[`Auth currentUser query will return current person from context to avoid duplicate checks 1`] = `
Object {
  "data": Object {
    "currentUser": Object {
      "id": "AuthenticatedUser:820e872a1e13865c139d7cae82e71ac7",
      "profile": Object {
        "email": null,
      },
    },
  },
}
`;

exports[`Auth currentUser query will return current person from context to avoid duplicate checks 2`] = `
Object {
  "calls": Array [],
  "instances": Array [],
  "invocationCallOrder": Array [],
  "results": Array [],
}
`;

exports[`Auth logs in a user 1`] = `
Object {
  "data": Object {
    "authenticate": Object {
      "user": Object {
        "id": "AuthenticatedUser:057b0758543270d1cb21784cac4d3f5c",
        "profile": Object {
          "email": "isaac.hardy@newspring.cc",
        },
        "rock": Object {
          "authCookie": "some cookie",
          "authToken": "some token",
        },
        "rockToken": "some cookie",
      },
    },
  },
}
`;

exports[`Auth logs in a user 2`] = `
Array [
  Array [
    Object {
      "data": "some-identity",
      "expiresIn": 31556952,
      "key": ":userLogins:234d7a42b877ed9b07eec6880c3576deac311057",
    },
  ],
]
`;

exports[`Auth registers an auth token and passes the cookie on requests to rock 1`] = `
Headers {
  Symbol(map): Object {
    "Authorization-Token": Array [
      "null",
    ],
    "Content-Type": Array [
      "application/json",
    ],
    "cookie": Array [
      "some-cookie",
    ],
    "user-agent": Array [
      "Apollos",
    ],
  },
}
`;

exports[`Auth throws invalid credentials error on bad password 1`] = `
Object {
  "data": Object {
    "authenticate": null,
  },
  "errors": Array [
    [GraphQLError: Username or Password incorrect],
  ],
}
`;
